syntax = "proto3";

option go_package = "blackprism.org/noyra/grpc-proto/container";

package container;

service Container {
  rpc Start (StartRequest) returns (Response) {}
  rpc Stop (StopRequest) returns (Response) {}
  rpc Remove (RemoveRequest) returns (Response) {}
  rpc List (ListRequest) returns (ListResponse) {}
}

message StartRequest {
  string image = 1;
  string name = 2;
  map<string, string> labels = 3;
  map<uint32, string> exposed_ports = 4;
  string network = 5;
}

message StopRequest {
  string containerId = 1;
}

message RemoveRequest {
  string containerId = 1;
}

message ListRequest {}

message ListResponse {
  repeated ContainerInfo containers = 1;
}

message ContainerInfo {
  string id = 1;
  string name = 2;
}

message Response {
  string status = 1;
  string message = 2;
}
